--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -8,8 +8,10 @@
   margin: 18px;
   background: linear-gradient(176.17deg, #f9fafb 0.94%, #edf0f3 316.54%);
   border-radius: 6px;
+  box-shadow:
+    0px 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0px 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
-
 
 @media screen and (max-width: 1100px) {
   .cardContainer {
@@ -20,6 +22,6 @@
 @media screen and (max-width: 630px) {
   .cardContainer {
     padding: 48px 12px;
-    gap: 20px;
+    gap: 40px;
   }
 }
