--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,16 +1,25 @@
 @reference "tailwindcss";
 
 .button {
-  width: 100%;
   padding: 12px 20px;
-  @apply text-white;
   @apply font-medium;
-  background-color: #4338ca;
   border-radius: 4px;
   border: none;
 }
 
-.button:hover {
+.primary {
+  width: 100%;
+  @apply text-white;
+  background-color: #4338ca;
+}
+
+.secondary {
+  box-shadow:
+    0px 1px 3px rgba(0, 1, 3, 0.1),
+    0px 1px 2px rgba(0, 1, 2, 0.06);
+}
+
+.primary:hover {
   cursor: pointer;
   background-color: #3730a3;
   box-shadow:
@@ -18,7 +27,7 @@
     0px 1px 2px rgba(0, 0, 0, 0.05);
 }
 
-.button:focus {
+.primary:focus {
   outline: 2px solid #c7d2fe;
 }
 
@@ -26,3 +35,27 @@
   @apply bg-gray-100;
   @apply text-neutral-400;
 }
+
+.button:disabled:hover {
+  cursor: default;
+  @apply bg-gray-100;
+}
+
+.secondary:hover {
+  cursor: pointer;
+  @apply bg-gray-300;
+  box-shadow:
+    0px 1px 3px rgba(0, 1, 3, 0.1),
+    0px 1px 2px rgba(0, 1, 2, 0.06);
+}
+
+.secondary:focus {
+  outline: 2px solid #c7d2fe;
+}
+
+.tertiary {
+  box-shadow:
+    0px 1px 3px rgba(0, 1, 3, 0.1),
+    0px 1px 2px rgba(0, 1, 2, 0.06);
+}
+
