--- a/src/components/List/List.module.css
+++ b/src/components/List/List.module.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  padding: 54px;
+  padding-left: 40px;
 }
 
 @media screen and (max-width: 1100px) {
