--- a/src/components/StatisticsSection/StatisticsSection.module.css
+++ b/src/components/StatisticsSection/StatisticsSection.module.css
@@ -46,6 +46,7 @@
 .listItemHeading {
   @apply text-indigo-700;
   @apply text-5xl;
+  @apply font-semibold;
 }
 
 .listItemText {
@@ -62,5 +63,9 @@
 @media screen and (max-width: 630px) {
   .containerContent {
     gap: 48px;
+  }
+
+  .listItemHeading {
+    @apply text-4xl
   }
 }
