--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 body {
-  font-family: "Noto Sans";
+  font-family: 'Noto Sans';
   min-height: 100vh;
   max-width: 1440px;
   -webkit-font-smoothing: antialiased;
@@ -13,3 +13,31 @@ body {
   @apply font-normal;
   margin: 0 auto;
 }
+
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 64px;
+  padding: 96px;
+  margin: 18px;
+  background: linear-gradient(176.17deg, #f9fafb 0.94%, #edf0f3 316.54%);
+  border-radius: 6px;
+  box-shadow:
+    0px 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0px 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
+@media screen and (max-width: 1100px) {
+  main {
+    padding: 64px 16px;
+    gap: 64px;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  main {
+    padding: 48px 12px;
+    gap: 40px;
+  }
+}
+
