--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -1,10 +1,13 @@
 @reference "tailwindcss";
 
+.containerInput {
+  position: relative;
+  width: 100%;
+}
+
 .input {
-  max-width: 320px;
   width: 100%;
   display: flex;
-  gap: 8px;
   padding: 14px 10px;
   border: 1px solid #e5e5e5;
   border-radius: 4px;
@@ -25,4 +28,11 @@
 
 .input:disabled {
   @apply text-neutral-400;
+}
+
+.error {
+  @apply text-sm;
+  @apply text-red-600;
+  position: absolute;
+  top: 48px;
 }
