--- a/src/components/NewsLetterSection/NewsLetterSection.module.css
+++ b/src/components/NewsLetterSection/NewsLetterSection.module.css
@@ -1,33 +1,33 @@
 @reference "tailwindcss";
 
-.containerContent {
-  display: flex;
-  justify-content: space-between;
+.containerNewsLetterSection {
+  flex-direction: row;
+  background: white;
   gap: 32px;
-  padding: 0 32px;
 }
 
 .containerTextContent {
   display: flex;
   flex-direction: column;
-  gap: 48px;
+  flex-basis: 50%;
+  padding: 74px 0;
 }
 
 .heading {
   @apply text-5xl;
   @apply font-semibold;
+  margin-bottom: 64px;
 }
 
 .containerImg {
-  max-width: 705px;
-  width: 100%;
-  min-width: 320px;
+  flex-basis: 50%;
 }
 
 .containerForm {
   display: flex;
   flex-direction: column;
   gap: 16px;
+  margin-top: 48px;
 }
 
 .logo {
@@ -38,4 +38,44 @@
 .form {
   display: flex;
   gap: 16px;
+}
+
+.containerEmailInput {
+  display: flex;
+  flex-direction: column;
+  max-width: 334px;
+  gap: 12px;
+}
+
+@media screen and (max-width: 1100px) {
+  .containerNewsLetterSection {
+    flex-direction: column;
+  }
+
+  .containerTextContent {
+    padding: 0 0 64px 0;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .containerTextContent {
+    padding: 0;
+  }
+
+  .heading {
+    @apply text-3xl;
+    margin-bottom: 32px;
+  }
+
+  .form {
+    flex-direction: column;
+  }
+  .form button {
+    max-width: 334px;
+    width: 100%;
+  }
+
+  .containerNewsLetterSection {
+    gap: 16px;
+  }
 }
