--- a/src/components/List/ListItem/ListItem.module.css
+++ b/src/components/List/ListItem/ListItem.module.css
@@ -7,13 +7,13 @@
 
 .listItemIcon {
   position: absolute;
-  left: -44px;
-  width: 24px;
-  height: 24px;
+  left: -60px;
+  top: -10px;
+  width: 48px;
+  height: 48px;
   border-radius: 50%;
   background-position: center;
   background-repeat: no-repeat;
-  background-color: #eef2ff;
   box-shadow:
     0px 10px 15px -3px rgba(0, 0, 0, 0.1),
     0px 4px 6px -2px rgba(0, 0, 0, 0.05);
@@ -21,4 +21,17 @@
 
 .listItemText {
   @apply text-neutral-600;
+  padding-left: 12px;
+}
+
+@media screen and (max-width: 1100px){
+  .listItemIcon {
+    left: -50px;
+  }
+}
+
+@media screen and (max-width: 630px){
+  .listItemText {
+    @apply text-base;
+  }
 }
