--- a/src/components/TeamSection/TeamSection.module.css
+++ b/src/components/TeamSection/TeamSection.module.css
@@ -3,7 +3,7 @@
 .containerTeamList {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 32px;
+  column-gap: 32px;
 }
 
 .containerItem {
@@ -18,13 +18,15 @@
 
 .containerImg img {
   width: 100%;
-  height: auto;
+  max-height: 296px;
+  height: 100%;
+  object-fit: cover;
 }
 
 .name {
   @apply font-medium;
   @apply text-xl;
-  margin-bottom: 4px;
+  margin-bottom: 7px;
 }
 
 .position {
@@ -42,6 +44,7 @@
 @media screen and (max-width: 1100px) {
   .containerTeamList {
     grid-template-columns: 1fr 1fr;
+    row-gap: 64px;
   }
 }
 
