--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -8,6 +8,10 @@
   align-self: flex-start;
 }
 
+.button:hover {
+  cursor: pointer;
+}
+
 .primary {
   @apply text-white;
   background-color: #4338ca;
@@ -20,7 +24,6 @@
 }
 
 .primary:hover {
-  cursor: pointer;
   background-color: #3730a3;
   box-shadow:
     0px 1px 3px rgba(0, 0, 0, 0.1),
@@ -42,7 +45,6 @@
 }
 
 .secondary:hover {
-  cursor: pointer;
   @apply bg-gray-300;
   box-shadow:
     0px 1px 3px rgba(0, 1, 3, 0.1),
@@ -54,8 +56,20 @@
 }
 
 .tertiary {
-  box-shadow:
-    0px 1px 3px rgba(0, 1, 3, 0.1),
-    0px 1px 2px rgba(0, 1, 2, 0.06);
+  @apply bg-red-600;
+  @apply text-white;
+}
+
+.tertiary:hover {
+  @apply bg-red-700;
+}
+
+.tertiary:focus {
+  outline: 1px solid #fecaca;
+}
+
+.tertiary:disabled {
+  background-color: transparent;
+  @apply text-neutral-400;
 }
 
